SpringBoot 3 upgrade.